<resources>
    <string name="app_name">TestApp</string>
    <string name="action_settings">Settings</string>
    <string name="first">First Button</string>
    <string name="second">Second Button</string>
    <string name="desc">Krzysztof Sikora</string>
    <string name="title_activity_kenis">KenisActivity</string>
    <string name="title_activity_toys">ToysActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="action_save">save</string>
    <string name="fiches">Fiszki</string>
    <string name="title_activity_fiches">FichesActivity</string>
    <string name="appwidget_text">TestApp</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_coutdown">CoutdownActivity</string>
    <string name="countdown">Odliczanie</string>
    <string name="start">Start</string>
    <string name="title_activity_prime_number">PrimeNumberActivity</string>
    <string name="whichNumber">którą liczbę pierwszą wyświetlić</string>
    <string name="five">5</string>
    <string name="prime">Prime number</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="title_activity_draw">DrawActivity</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="takePhoto">Take photo</string>
    <string name="openGallery">Open Gallery</string>
    <string name="camera">Camera</string>

    <string-array name="activities">
        <item>Fiszki</item>
        <item>Odliczanie</item>
        <item>Liczba pierwsza</item>vv
        <item>Poziomica</item>
        <item>Rysowanie</item>
        <item>Kamera</item>
    </string-array>
    <string name="title_activity_web">WebActivity</string>
    <string name="intro">Tutorial android</string>
</resources>
