<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_toys"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.krzysztofsikora.testapp.ToysActivity"
    tools:showIn="@layout/activity_toys">

    <TextView
        android:text="@string/desc"
        android:textColor="#000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="42sp"
        android:layout_marginTop="97dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/fiches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/fishesBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:onClick="click"/>

    <Button
        android:id="@+id/countdownBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="106dp"
        android:text="@string/countdown"
        android:onClick="click"/>

    <Button
        android:id="@+id/primeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdownBtn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/prime"
        android:onClick="click"/>

</RelativeLayout>
